test/scc_test/decl/semantic-errors/056.a
056.t:1:10: error: parameter name omitted